--- a/css/styles.css
+++ b/css/styles.css
@@ -15,20 +15,58 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
-header {
-    background-color: #2a2a2a;
+.portfolio-header {
+    background-color: #fff;
     padding: 15px 0;
 }
+.index-header {
+    background-color: #fff;
+    padding: 15px 0;
+}
+.banner-section {
+    background-color: #2a2a2a;
+    color: #fff;
+    text-align: center;
+    padding: 100px 0;
+}
+.banner-section h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+.banner-section a {
+    background-color: #00bfff;
+    padding: 10px 20px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.button-active {
+    background-color: #00bfff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button-active:hover {
+    background-color: #008ccc;
+}
+
 .logo img{
     width: 100px;
 }
 nav ul {
+    background-color: #fff;
+    color: #2a2a2a;
     list-style: none;
     display: flex;
     gap: 20px;
 }
 nav a {
-    color: #fff;
+    color: #2a2a2a;
     margin-left: 20px;
 }
 .contacts a:hover, nav a:hover {
@@ -75,7 +113,7 @@ footer {
     background-color: #2a2a2a;
     color: #fff;
     padding: 20px 0;
-    text-align: center;
+    text-align: left;
 }
 footer a {
     color: #fff;
