--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,21 @@
 body {
     font-family: 'Robot', sans-serif;
     font-size: 16px;
+    font-weight: 400;
     line-height: 1.5;
     color: #333;
     background-color: #fff;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+p {
+    font-weight: 400;
+}
+
+strong {
+    font-weight: 700;
 }
 .container {
     max-width: 1170px;
@@ -46,7 +58,7 @@ body {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
