--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'Robot', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
